--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,10 @@ h1 {
     margin-bottom: 1rem;
 }
 
+li {
+    list-style-type: none;
+}
+
 .container {
     font-size: 1.6rem;
     min-height: 100vh;
@@ -54,6 +58,11 @@ h1 {
 
 .btn-primary {
     background: var(--primary);
+    color: var(--text-color-light);
+}
+
+.btn-danger {
+    background: var(--danger);
     color: var(--text-color-light);
 }
 
@@ -106,6 +115,30 @@ header {
     padding: 0.5rem;
     border: var(--border);
     border-radius: 3px;
+}
+
+.todo-list {
+    margin: 20px 0;
+}
+
+.todo-item {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0;
+}
+
+.todo-item:nth-child(odd) {
+    background: var(--background-light);
+}
+
+.todo-name {
+    flex: 1;
+}
+
+.todo-done {
+    text-decoration: line-through;
 }
 
 /** footer */
